# sqlcheck

./: README.md  pyproject.toml
src/sqlcheck/: sqlcheck.py  sqldump.py  sqlformat.py
