[tool.poetry]
name = "sqlcheck"
version = "0.3.1"
description = "SQL query checker"
authors = ["Yoichi Amano <amano.yoichi@gmail.com>"]
readme = "README.md"
packages = [{include = "sqlcheck", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlparse = "*"
mindiff = {git = "ssh://github.com/amano41/mindiff"}

[tool.poetry.group.dev.dependencies]
flake8 = "*"
black = "*"

[tool.poetry.scripts]
sqlcheck = "sqlcheck.sqlcheck:main"
sqldump = "sqlcheck.sqldump:main"
sqlformat = "sqlcheck.sqlformat:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
